demos/k8s-ingress-cheese/cheese-ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 annotations:
   kubernetes.io/ingress.class: nginx
 name: cheese-ingress
spec:
 rules:
 - host: cheddar-cheese.apps.awspks.pcfsdu.com
   http:
     paths:
     - backend:
         serviceName: cheddar-cheese
         servicePort: 80
 - host: stilton-cheese.apps.awspks.pcfsdu.com
   http:
     paths:
     - backend:
         serviceName: stilton-cheese
         servicePort: 80
